changes isBlank() to trim().isEmpty()